Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90595

QCombobox placeholderText not visible

XMLWordPrintable

    • 6da6b6da4494439dc34e92fee7d69b5ad48a783d (qt/qtbase/dev) 191e1bbf37c44aff8b208947754b9000a679912d (qt/qtbase/6.0) 4699abaedca56c735cdc59f0ef217629e26b9192 (qt/tqtc-qtbase/tqtc/lts-5.15)

      QCombobox placeholderText is not visible when set through QCombobox::setPlaceholderText function in Qt versions 5.15.2 and 6.0.0 (neither using ui forms). PlaceholderText is visible when using Qt version 5.15.0.

      Steps needed to reproduce the problem:

      1. Build and run attached Project with Qt version 5.15.0.
      2. PlaceholderText in combobox is visible as intended.

      3. Build and run attached Project with Qt version 5.15.2 or 6.0.0.
      4. Check and notice that PlaceholderText in combobox is not visible.

        1. qtbug90595.zip
          0.8 kB
          Tuukka Kettunen
        For Gerrit Dashboard: QTBUG-90595
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            foxxx Tuukka Kettunen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes